# liquid-etl

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  tune_ingest.py
.github/workflows/: ci.yml
configs/: example.local.json  example.postgres.json  example.pubsub.json
docker/: README.md
docker/elements/: Dockerfile  entrypoint.sh  mine.sh
docker/etl/: Dockerfile
services/eval/: README.md  harness.py  run_eval.py  test_eval.py
src/: cli.py  config.py  pipeline.py  rpc.py  schema.py  service.py
src/cli/: __init__.py  __main__.py  commands_legacy.py  common_args.py  config_apply.py  parser.py  progress.py
src/cli/commands/: audit_rpc_schema.py  enrich_transactions.py  export_all.py  export_blocks_and_transactions.py  filter_items.py  get_block_range_for_date.py  ingest_range_to_postgres.py  load_ndjson_to_postgres.py  load_ndjson_to_sqlite.py  repair_postgres.py  stream.py
src/jobs/: enrich_transactions_job.py  export_all_job.py  export_blocks_job.py
src/service/: __init__.py  normalize_block.py  normalize_tx.py  range.py
src/streaming/: streamer_adapter.py
src/utils/: amounts.py  db_writer.py  elements_auth.py  filters.py  io.py  normalizer.py  postgres_writer.py  postgres_writer_v2.py  rpc_schema_audit.py  script_parsing.py  sql_resources.py  sqlite_writer.py  tx_enrichment.py  v2_normalizer.py
src/utils/audit/: postgres_pruning.py  rpc_sampler.py  rpc_schema.py
src/utils/normalization/: address.py  block.py  tx.py  vin.py  vout.py
src/utils/postgres/: coercion.py  migrations.py  schema.py  sql_files.py  writer.py
src/utils/sqlite/: schema.py  sql_files.py  writer.py
src/utils/sqlite/sql/: schema.sql  (+2 more)
tests/: conftest.py  test_cli_parser.py  test_e2e_ingest.py  test_elements_auth.py  test_enrich_job.py  test_export_all.py  test_export_jobs.py  test_filters.py  test_functional_ingest.py  test_normalizer.py  test_postgres_integration.py  test_postgres_optional.py  test_postgres_writer_unit.py  test_rpc.py  test_rpc_integration.py  test_rpc_schema_audit.py  test_scripts_and_opreturn.py  test_service.py  test_service_batch_fetch.py  test_service_edge_cases.py  test_smoke.py  test_sqlite_local_mode.py  test_streaming.py  test_v2_normalizer.py
tests/e2e/: test_e2e_ingest.py
tests/functional/: test_functional_ingest.py
tests/integration/: test_ingest_benchmark.py
tests/integration/postgres/: test_postgres_integration.py
tests/integration/rpc/: test_rpc_integration.py
tests/smoke/: test_smoke.py
tests/unit/: test_config.py  test_pipeline.py  test_sql_files.py
tests/unit/cli/: test_cli_parser.py  test_ingest_range_to_postgres_speed.py  test_load_ndjson_to_sqlite.py
tests/unit/jobs/: test_export_all.py  test_export_jobs.py
tests/unit/rpc/: test_elements_auth.py  test_rpc.py  test_rpc_schema_audit.py
tests/unit/service/: test_range.py  test_service.py  test_service_edge_cases.py
(+20 files in other folders)
